--- a/TapTapBox/tangible/style.css
+++ b/TapTapBox/tangible/style.css
@@ -1,3 +1,12 @@
 body {
   font-family: "Open Sans", sans-serif;
 }
+
+.col-xs-6 img {
+    float: left;
+    clear: none;
+    margin-right: 20px;
+    border-style: dashed;
+    width: 100px;
+    height: 100px;
+}
